vaultwarden/vaultwarden-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
    - web
    - web-external
    - websecure-external
  routes:
  - match: Host(`vault.theendboss101.com`)
    kind: Rule
    services:
    - name: vaultwarden
      port: 80
#  tls:
#    certResolver: default
